--- a/index.html.html
+++ b/index.html.html
@@ -1,103 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Karthick M - Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Karthick M | Portfolio</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
+    /* --- Basic Reset --- */
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
     }
 
     header {
-      background-color: #2c3e50;
-      color: white;
+      background: #222;
+      color: #fff;
       padding: 20px;
       text-align: center;
     }
 
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 5px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #ccc;
+    }
+
     section {
-      padding: 20px;
-      max-width: 900px;
+      padding: 40px 20px;
+      max-width: 1000px;
       margin: auto;
     }
 
     h2 {
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 5px;
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #444;
+      border-left: 5px solid #0077ff;
+      padding-left: 10px;
     }
 
-    .project {
+    .about p {
+      font-size: 1.1rem;
+      margin-bottom: 15px;
+    }
+
+    .skills {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 15px;
+    }
+
+    .skill-box {
       background: #fff;
-      padding: 15px;
       border: 1px solid #ddd;
-      margin: 10px 0;
-      border-radius: 5px;
+      padding: 15px;
+      text-align: center;
+      border-radius: 10px;
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+      transition: 0.3s;
+    }
+
+    .skill-box:hover {
+      transform: scale(1.05);
+      border-color: #0077ff;
     }
 
     footer {
       text-align: center;
-      padding: 15px;
-      background-color: #eee;
+      padding: 20px;
+      background: #222;
+      color: #fff;
       margin-top: 40px;
+    }
+
+    footer a {
+      color: #0077ff;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
 
+  <!-- Header -->
   <header>
     <h1>Karthick M</h1>
-    <p>Web Developer | Designer | Tech Enthusiast</p>
+    <p>Web & Software Developer | Designer</p>
   </header>
 
-  <section>
+  <!-- About Section -->
+  <section class="about">
     <h2>About Me</h2>
-    <p>Hello! I'm Karthick M, a passionate web developer with experience in building responsive and user-friendly websites. I love turning ideas into reality using clean and efficient code.</p>
+    <p>Hello! I’m <b>Karthick M</b>, a passionate developer with a strong interest in 
+    <b>Java, Web Development, and Creative Design</b>. I enjoy building clean, 
+    user-friendly applications and websites that solve real-world problems.</p>
   </section>
 
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>React, Node.js</li>
-      <li>Python, Django</li>
-      <li>UI/UX Design</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Projects</h2>
-
-    <div class="project">
-      <h3>Portfolio Website</h3>
-      <p>A personal portfolio website to showcase my skills and projects.</p>
-    </div>
-
-    <div class="project">
-      <h3>Todo App</h3>
-      <p>A simple todo app built using JavaScript and localStorage for task management.</p>
-    </div>
-
-    <div class="project">
-      <h3>Weather App</h3>
-      <p>Weather forecasting app using OpenWeatherMap API and JavaScript.</p>
+  <!-- Skills Section -->
+  <section class="skills-section">
+    <h2>My Skills</h2>
+    <div class="skills">
+      <div class="skill-box">Java</div>
+      <div class="skill-box">HTML</div>
+      <div class="skill-box">CSS</div>
+      <div class="skill-box">JavaScript</div>
+      <div class="skill-box">React</div>
+      <div class="skill-box">Node.js</div>
+      <div class="skill-box">UI/UX Design</div>
+      <div class="skill-box">Git & GitHub</div>
     </div>
   </section>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: karthick@example.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/karthick" target="_blank">linkedin.com/in/karthick</a></p>
-    <p>GitHub: <a href="https://github.com/karthick" target="_blank">github.com/karthick</a></p>
-  </section>
-
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Karthick M. All rights reserved.</p>
+    <p>📧 Contact me: <a href="mailto:karthick@example.com">karthick@example.com</a></p>
+    <p>© 2025 Karthick M | All Rights Reserved</p>
   </footer>
 
 </body>
 </html>
+
